Implemented gamil setting for sending mails

--- a/.env
+++ b/.env
@@ -20,8 +20,10 @@ APP_SECRET=0e9d16dcc0b1700e41213985e78b7dd5
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
-#MAILER_DSN=smtp://8ac4c86f8ffb92:0d798a83871b4b@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
-MAILER_DSN=smtp://etolls@dczambia.org:qwery12345@mail.dczambia.org:587?encryption=tls
+# MAILER_DSN=smtp://8ac4c86f8ffb92:0d798a83871b4b@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+#MAILER_DSN=smtp://mail.dczambia.org:465?encryption=ssl&auth_mode=login&username=zeyesa.hinji@dczambia.org&password=zzzzz
+
+# MAILER_URL=smtp://zeyesa.hinji@dczambia.org:zhinji@mail.dczambia.org:465?encryption=ssl
 
 
 
@@ -42,3 +44,8 @@ MAILER_DSN=smtp://etolls@dczambia.org:qwery12345@mail.dczambia.org:587?encryptio
 # Delivery is disabled by default via "null://localhost"
 #MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://hinjizeyesa@gmail.com:Christian2024.@localhost
+###< symfony/google-mailer ###
