--- a/.env
+++ b/.env
@@ -47,5 +47,7 @@ APP_SECRET=0e9d16dcc0b1700e41213985e78b7dd5
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://hinjizeyesa@gmail.com:Christian2024.@localhost
+MAILER_DSN=gmail://hinjizeyesa@gmail.com:Christian2024.@smtp.gmail.com
+#MAILER_DSN=gmail://etolls@dczambia.org:qwerty12345@smtp.gmail.com
+
 ###< symfony/google-mailer ###
